tests/golden/compile-pass/struct_assoc_fn.rua
struct Point {
    x: i64,
    y: i64,
}

impl Point {
    fn origin() -> Point {
        Point { x: 0, y: 0 }
    }
}

fn main() {
    let point = Point::origin();
}
