tests/golden/compile-fail/struct_extra_field.rua
struct Point { x: i64 }

fn origin() -> Point {
    Point { x: 0, y: 0 }
}
